@@ -26,30 +26,6 @@ name|IntroSorter
 extends|extends
 name|Sorter
 block|{
-DECL|method|ceilLog2
-specifier|static
-name|int
-name|ceilLog2
-parameter_list|(
-name|int
-name|n
-parameter_list|)
-block|{
-return|return
-name|Integer
-operator|.
-name|SIZE
-operator|-
-name|Integer
-operator|.
-name|numberOfLeadingZeros
-argument_list|(
-name|n
-operator|-
-literal|1
-argument_list|)
-return|;
-block|}
 comment|/** Create a new {@link IntroSorter}. */
 DECL|method|IntroSorter
 specifier|public
@@ -84,11 +60,17 @@ name|from
 argument_list|,
 name|to
 argument_list|,
-name|ceilLog2
+literal|2
+operator|*
+name|MathUtil
+operator|.
+name|log
 argument_list|(
 name|to
 operator|-
 name|from
+argument_list|,
+literal|2
 argument_list|)
 argument_list|)
 expr_stmt|;
